fix overflow header and description

--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -46,7 +46,8 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  column-gap: 44px;
 
   @media (max-width: $mobile-width) {
     flex-direction: column;
@@ -57,7 +58,6 @@
 .description__item {
   box-sizing: border-box;
   position: relative;
-  height: 130px;
   font-size: 22px;
   line-height: 34px;
   text-align: center;
