--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 134px;
+  column-gap: 134px;
   width: 100%;
   align-items: center;
   margin: 0 0 0 19px;
